--- a/src/modules/ViewRecord/components/_ViewRecord.scss
+++ b/src/modules/ViewRecord/components/_ViewRecord.scss
@@ -233,6 +233,7 @@
         margin-left: 12px !important;
       }
       @include mobile {
+        margin-top: 12px !important;
         margin-left: 6px !important;
       }
     }
@@ -247,6 +248,9 @@
   .shareThis {
     @include tablet {
       margin-top: -26px !important;
+    }
+    @include mobile {
+      margin-left: -3px;
     }
   }
 }
